test(TournamentController): Fix createTournament_createsTournament() test to assert code creation properly.